syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "DeviceServices";

import "device-model.proto";

// Device management APIs.
service DeviceManagement {

	// #############################
	// ### DEVICE SPECIFICATIONS ###
	// #############################
	
	// Create a new device specification.
	rpc CreateDeviceSpecification (GCreateDeviceSpecificationRequest) returns (GCreateDeviceSpecificationResponse) {}

	// Get device specification by unique token.
	rpc GetDeviceSpecificationByToken (GGetDeviceSpecificationByTokenRequest) returns (GGetDeviceSpecificationByTokenResponse) {}

	// Update an existing device specification.
	rpc UpdateDeviceSpecification (GUpdateDeviceSpecificationRequest) returns (GUpdateDeviceSpecificationResponse) {}

	// List device specifications that meet criteria.
	rpc ListDeviceSpecifications (GListDeviceSpecificationsRequest) returns (GListDeviceSpecificationsResponse) {}

	// Delete an existing device specification.
	rpc DeleteDeviceSpecification (GDeleteDeviceSpecificationRequest) returns (GDeleteDeviceSpecificationResponse) {}

	// #######################
	// ### DEVICE COMMANDS ###
	// #######################
	
	// Create a new device command.
	rpc CreateDeviceCommand (GCreateDeviceCommandRequest) returns (GCreateDeviceCommandResponse) {}
	
	// Get device command by unique token.
	rpc GetDeviceCommandByToken (GGetDeviceCommandByTokenRequest) returns (GGetDeviceCommandByTokenResponse) {}
	
	// Update an existing device command.
	rpc UpdateDeviceCommand (GGetDeviceCommandByTokenRequest) returns (GGetDeviceCommandByTokenResponse) {}

	// List device commands that meet criteria.
	rpc ListDeviceCommands (GListDeviceCommandsRequest) returns (GListDeviceCommandsResponse) {}

	// Delete an existing device command.
	rpc DeleteDeviceCommand (GDeleteDeviceStatusRequest) returns (GDeleteDeviceCommandResponse) {}

	// #######################
	// ### DEVICE STATUSES ###
	// #######################
	
	// Create a new device status.
	rpc CreateDeviceStatus (GCreateDeviceStatusRequest) returns (GCreateDeviceStatusResponse) {}
	
	// Get device status by unique code.
	rpc GetDeviceStatusByCode (GGetDeviceStatusByCodeRequest) returns (GGetDeviceStatusByCodeResponse) {}
	
	// Update an existing device status.
	rpc UpdateDeviceStatus (GUpdateDeviceStatusRequest) returns (GUpdateDeviceStatusResponse) {}

	// List device statuses that meet criteria.
	rpc ListDeviceStatuses (GListDeviceStatusesRequest) returns (GListDeviceStatusesResponse) {}

	// Delete an existing device status.
	rpc DeleteDeviceStatus (GDeleteDeviceCommandRequest) returns (GDeleteDeviceStatusResponse) {}

	// ###############
	// ### DEVICES ###
	// ###############
	
	// Create a new device.
	rpc CreateDevice (GCreateDeviceRequest) returns (GCreateDeviceResponse) {}
	
	// Get a device by unique hardware id.
	rpc GetDeviceByHardwareId (GGetDeviceByaHardwareIdRequest) returns (GGetDeviceByaHardwareIdResponse) {}
	
	// Update an existing device.
	rpc UpdateDevice (GUpdateDeviceRequest) returns (GUpdateDeviceResponse) {}

	// List devices that meet criteria.
	rpc ListDevices (GListDevicesRequest) returns (GListDevicesResponse) {}

	// Create a device element mapping.
	rpc CreateDeviceElementMapping (GCreateDeviceElementMappingRequest) returns (GCreateDeviceElementMappingResponse) {}

	// Delete a device element mapping.
	rpc DeleteDeviceElementMapping (GDeleteDeviceElementMappingRequest) returns (GDeleteDeviceElementMappingResponse) {}

	// Delete an existing device.
	rpc DeleteDevice (GDeleteDeviceRequest) returns (GDeleteDeviceResponse) {}
}

// #############################
// ### DEVICE SPECIFICATIONS ###
// #############################
	
// Request for creating a device specification.
message GCreateDeviceSpecificationRequest {
	com.sitewhere.grpc.model.GDeviceSpecificationCreateRequest request = 1;
}

// Response from creating a device specification.
message GCreateDeviceSpecificationResponse {
	com.sitewhere.grpc.model.GDeviceSpecification specification = 1;
}
	
// Request for getting a device specification by token.
message GGetDeviceSpecificationByTokenRequest {
	string token = 1;
}
	
// Response for getting a device specification by token.
message GGetDeviceSpecificationByTokenResponse {
	com.sitewhere.grpc.model.GDeviceSpecification specification = 1;
}
	
// Request for updating an existing device specification.
message GUpdateDeviceSpecificationRequest {
	string token = 1;
	com.sitewhere.grpc.model.GDeviceSpecificationCreateRequest request = 2;
}
	
// Response for updating an existing device specification.
message GUpdateDeviceSpecificationResponse {
	com.sitewhere.grpc.model.GDeviceSpecification specification = 1;
}
	
// Request for listing device specifications that meet criteria.
message GListDeviceSpecificationsRequest {
	com.sitewhere.grpc.model.GDeviceSpecificationSearchCriteria criteria = 1;
}
	
// Response for listing device specifications that meet criteria.
message GListDeviceSpecificationsResponse {
	com.sitewhere.grpc.model.GDeviceSpecificationSearchResults results = 1;
}
	
// Request for deleting a device specification.
message GDeleteDeviceSpecificationRequest {
	string token = 1;
}
	
// Response for deleting a device specification.
message GDeleteDeviceSpecificationResponse {
	repeated com.sitewhere.grpc.model.GDeviceSpecification specification = 1;
}

// #######################
// ### DEVICE COMMANDS ###
// #######################
	
// Request for creating a device specification.
message GCreateDeviceCommandRequest {
	string specificationToken = 1;
	com.sitewhere.grpc.model.GDeviceCommandCreateRequest request = 2;
}

// Response from creating a device specification.
message GCreateDeviceCommandResponse {
	com.sitewhere.grpc.model.GDeviceCommand command = 1;
}

// Request for getting a device command by token.
message GGetDeviceCommandByTokenRequest {
	string specificationToken = 1;
	string token = 2;
}
	
// Response for getting a device command by token.
message GGetDeviceCommandByTokenResponse {
	com.sitewhere.grpc.model.GDeviceCommand command = 1;
}
	
// Request for updating an existing device command.
message GUpdateDeviceCommandRequest {
	string specificationToken = 1;
	string token = 2;
	com.sitewhere.grpc.model.GDeviceCommandCreateRequest request = 3;
}
	
// Response for updating an existing device command.
message GUpdateDeviceCommandResponse {
	com.sitewhere.grpc.model.GDeviceCommand command = 1;
}
	
// Request for listing device commands that meet criteria.
message GListDeviceCommandsRequest {
	string specificationToken = 1;
	com.sitewhere.grpc.model.GDeviceCommandSearchCriteria criteria = 2;
}
	
// Response for listing device commands that meet criteria.
message GListDeviceCommandsResponse {
	com.sitewhere.grpc.model.GDeviceCommand command = 1;
}
	
// Request for deleting a device command.
message GDeleteDeviceCommandRequest {
	string specificationToken = 1;
	string token = 2;
}
	
// Response for deleting a device command.
message GDeleteDeviceCommandResponse {
	com.sitewhere.grpc.model.GDeviceCommand command = 1;
}

// #######################
// ### DEVICE STATUSES ###
// #######################
	
// Request for creating a device status.
message GCreateDeviceStatusRequest {
	string specificationToken = 1;
	com.sitewhere.grpc.model.GDeviceStatusCreateRequest request = 2;
}

// Response from creating a device status.
message GCreateDeviceStatusResponse {
	com.sitewhere.grpc.model.GDeviceStatus status = 1;
}

// Request for getting a device status by code.
message GGetDeviceStatusByCodeRequest {
	string specificationToken = 1;
	string code = 2;
}
	
// Response for getting a device status by code.
message GGetDeviceStatusByCodeResponse {
	com.sitewhere.grpc.model.GDeviceStatus status = 1;
}
	
// Request for updating an existing device status.
message GUpdateDeviceStatusRequest {
	string specificationToken = 1;
	string code = 2;
	com.sitewhere.grpc.model.GDeviceStatusCreateRequest request = 3;
}
	
// Response for updating an existing device status.
message GUpdateDeviceStatusResponse {
	com.sitewhere.grpc.model.GDeviceStatus status = 1;
}
	
// Request for listing device statuses that meet criteria.
message GListDeviceStatusesRequest {
	string specificationToken = 1;
	com.sitewhere.grpc.model.GDeviceStatusSearchCriteria criteria = 2;
}
	
// Response for listing device statuses that meet criteria.
message GListDeviceStatusesResponse {
	com.sitewhere.grpc.model.GDeviceStatus status = 1;
}
	
// Request for deleting a device status.
message GDeleteDeviceStatusRequest {
	string specificationToken = 1;
	string code = 2;
}
	
// Response for deleting a device status.
message GDeleteDeviceStatusResponse {
	com.sitewhere.grpc.model.GDeviceStatus status = 1;
}

// ###############
// ### DEVICES ###
// ###############
	
// Request for creating a device.
message GCreateDeviceRequest {
	com.sitewhere.grpc.model.GDeviceCreateRequest request = 1;
}

// Response from creating a device.
message GCreateDeviceResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
	
// Request for getting a device by hardware id.
message GGetDeviceByaHardwareIdRequest {
	string hardwareId = 1;
}
	
// Response for getting a device by hardware id.
message GGetDeviceByaHardwareIdResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
	
// Request for updating an existing device.
message GUpdateDeviceRequest {
	string hardwareId = 1;
	com.sitewhere.grpc.model.GDeviceCreateRequest request = 2;
}
	
// Response for updating an existing device.
message GUpdateDeviceResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
	
// Request for listing devices that meet criteria.
message GListDevicesRequest {
	com.sitewhere.grpc.model.GDeviceSearchCriteria criteria = 1;
}
	
// Response for listing devices that meet criteria.
message GListDevicesResponse {
	com.sitewhere.grpc.model.GDeviceSearchResults results = 1;
}
	
// Request for creating a device element mapping.
message GCreateDeviceElementMappingRequest {
	string hardwareId = 1;
	com.sitewhere.grpc.model.GDeviceElementMapping mapping = 2;
}
	
// Response for creating a device element mapping.
message GCreateDeviceElementMappingResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
	
// Request for creating a device element mapping.
message GDeleteDeviceElementMappingRequest {
	string hardwareId = 1;
	string path = 2;
}
	
// Response for creating a device element mapping.
message GDeleteDeviceElementMappingResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
	
// Request for deleting a device.
message GDeleteDeviceRequest {
	string hardwareId = 1;
}
	
// Response for deleting a device.
message GDeleteDeviceResponse {
	com.sitewhere.grpc.model.GDevice device = 1;
}
