syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "DeviceModel";

import "sitewhere-common.proto";
import "google/protobuf/timestamp.proto";

// #############################
// ### DEVICE SPECIFICATIONS ###
// #############################

// Device container policy.
enum GDeviceContainerPolicy {
	STANDALONE = 0;
	COMPOSITE = 1;
}

// Slot within a unit.
message GDeviceSlot {
	string name = 1;
	string path = 2;
}

// Unit within a schema.
message GDeviceUnit {
	string name = 1;
	string path = 2;
	repeated GDeviceUnit units = 3;
	repeated GDeviceSlot slots = 4;
}

// Device element schema.
message GDeviceElementSchema {
	repeated GDeviceUnit units = 1;
	repeated GDeviceSlot slots = 2;
}

// Request for creating a device specification.
message GDeviceSpecificationCreateRequest {
	string token = 1;
	string name = 2;
	string assetModuleId = 3;
	string assetId = 4;
	GDeviceContainerPolicy containerPolicy = 5;
	GDeviceElementSchema deviceElementSchema = 6;
	map<string, string> metadata = 7;
}

// Criteria for searching device specifications.
message GDeviceSpecificationSearchCriteria {
	bool includeDeleted = 1;
}

// Results for device specification search.
message GDeviceSpecificationSearchResults {
	int64 count = 1;
	repeated GDeviceSpecification specifications = 2;
}

// Reference to a device specification by token.
message GDeviceSpecificationReference {
	string token = 1;
}

// Device specification.
message GDeviceSpecification {
	string token = 1;
	string name = 2;
	string assetModuleId = 3;
	string assetId = 4;
	GDeviceContainerPolicy containerPolicy = 5;
	GDeviceElementSchema deviceElementSchema = 6;
	map<string, string> metadata = 7;
	GEntityInformation entityInformation = 8;
}

// #######################
// ### DEVICE COMMANDS ###
// #######################

// Device command parameter type.
enum GParameterType {
    DOUBLE = 0;
    FLOAT = 1;
    INT32 = 2;
    INT64 = 3;
    UINT32 = 4;
    UINT64 = 5;
    SINT32 = 6;
    SINT64 = 7;
    FIXED32 = 8;
    FIXED64 = 9;
    SFIXED32 = 10;
    SFIXED64 = 11;
    BOOL = 12;
    STRING = 13;
    BYTES = 14;
}

// Device command parameter.
message GCommandParameter {
	string name = 1;
	GParameterType type = 2;
	bool required = 3;
}

// Request for creating a device command.
message GDeviceCommandCreateRequest {
	string token = 1;
	string namespace = 2;
	string name = 3;
	string description = 4;
	repeated GCommandParameter parameters = 5;
	map<string, string> metadata = 6;
}

// Criteria for searching device commands.
message GDeviceCommandSearchCriteria {
	string token = 1;
	bool includeDeleted = 2;
}

// Device command.
message GDeviceCommand {
	string token = 1;
	string specificationToken = 2;
	string namespace = 3;
	string name = 4;
	string description = 5;
	repeated GCommandParameter parameters = 6;
	map<string, string> metadata = 7;
	GEntityInformation entityInformation = 8;
}

// #######################
// ### DEVICE STATUSES ###
// #######################

// Request for creating a device status.
message GDeviceStatusCreateRequest {
	string code = 1;
	string name = 2;
	string backgroundColor = 3;
	string foregroundColor = 4;
	string borderColor = 5;
	string icon = 6;
	map<string, string> metadata = 7;
}

// Criteria for searching device statuses.
message GDeviceStatusSearchCriteria {
	string code = 1;
}

// Device status.
message GDeviceStatus {
	string code = 1;
	string specificationToken = 2;
	string name = 3;
	string backgroundColor = 4;
	string foregroundColor = 5;
	string borderColor = 6;
	string icon = 7;
	map<string, string> metadata = 8;
}

// ###############
// ### DEVICES ###
// ###############

// Device element mapping.
message GDeviceElementMapping {
	string schemaPath = 1;
	string hardwareId = 2;
}

// Request for creating a device.
message GDeviceCreateRequest {
	string hardwareId = 1;
	string siteToken = 2;
	string specificationToken = 3;
	string parentHardwareId = 4;
	repeated GDeviceElementMapping deviceElementMappings = 5;
	string comments = 6;
	string status = 7;
	map<string, string> metadata = 8;
}

// Criteria for searching devices.
message GDeviceSearchCriteria {
	GDeviceSpecificationReference specification = 1;
	GSiteReference site = 2;
	bool excludeAssigned = 3;
	google.protobuf.Timestamp createdAfter = 4;
	google.protobuf.Timestamp createdBefore = 5;
}

// Results for device search.
message GDeviceSearchResults {
	int64 count = 1;
	repeated GDevice devices = 2;
}

// Device.
message GDevice {
	string hardwareId = 1;
	string siteToken = 2;
	string specificationToken = 3;
	string assignmentToken = 4;
	string parentHardwareId = 5;
	repeated GDeviceElementMapping deviceElementMappings = 6;
	string comments = 7;
	string status = 9;
	map<string, string> metadata = 10;
	GEntityInformation entityInformation = 11;
}

// #############
// ### SITES ###
// #############

// Reference to a site by token.
message GSiteReference {
	string token = 1;
}